# parallel-research

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  TODOS.md  pyproject.toml  requirements.txt  research_runner.py  setup
.github/workflows/: ci.yml
docs/: explanation-design.md  howto-add-provider.md  howto-basic-research.md  howto-deep-research.md  howto-meta-analysis.md  howto-select-providers.md  reference-architecture.md  reference-baseprovider-api.md  reference-output-format.md  tutorial-getting-started.md
providers/: __init__.py  base.py  claude.py  gemini.py  openai_provider.py  perplexity.py
scripts/: audit_dependencies  check_markdown_links.py
src/parallel_research/: __init__.py  cli.py  manifest.py  models.py  orchestrator.py  safety.py
src/parallel_research/providers/: __init__.py  _utils.py  base.py  claude.py  gemini.py  openai_provider.py  perplexity.py
tests/: test_manifest.py  test_orchestrator.py  test_provider_contracts.py  test_retries.py  test_safety.py
